--- a/public/views/common/navigation.html
+++ b/public/views/common/navigation.html
@@ -62,6 +62,7 @@
                 <a href=""><i class="fa fa-user"></i> <span class="nav-label">Phone</span><span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" ng-class="{in: $state.includes('phone')}">
                     <li ui-sref-active="active"><a ui-sref="phone.make_call">Make Call</a></li>
+                    <li ui-sref-active="active"><a ui-sref="phone.tasks">Tasks</a></li>
 
                 </ul>
             </li>
