--- a/public/views/employee/create_new.html
+++ b/public/views/employee/create_new.html
@@ -1,10 +1,8 @@
 
 
 
-<div style="position: relative;float: left;width: 600px; height: 600px; margin-top:100px; padding: 20px;background-color: lavender">
-    <p ng-repeat="(key, value) in i ">{{ key }} :: {{ value }}</p>
-</div>
-<div ui-view="" class="ng-scope"><div class="row wrapper border-bottom white-bg page-heading ng-scope">
+
+><div class="row wrapper border-bottom white-bg page-heading ng-scope">
     <div class="col-lg-10">
         <h2>Basic Form</h2>
         <ol class="breadcrumb">
@@ -15,10 +13,10 @@
     </div>
     <div class="col-lg-2"></div>
 </div>
-</div>
 
 
-<div class="wrapper wrapper-content animated fadeInRight ng-scope">
+
+<div class="wrapper wrapper-content animated fadeInRight ng-scope"style="min-height: 1300px">
     <div claxss="row">
         <div class="col-lg-10">
             <div class="ibox float-e-margins">
